# moldeodirector

./: .gitmodules  Makefile.am  TODO  configure.ac  control.amd64  exportdata.bat
data/: Makefile.am
data/samples/Camaleon/: blur.cfg  camaleon.mol  debug.cfg  erase.cfg  icam.cfg  oscin.cfg  oscout.cfg  plano011.cfg  plano01111.cfg  plano0111111.cfg  plano1.cfg  videomanager_circularbuffer.cfg
data/samples/Cameras/: cameras.mol  debug.cfg  icam.cfg  moldeoapioscout.cfg  sesion.mos  videomanager.cfg
data/samples/CamerasCircular/: cameras_circular.mol  image_realtime.cfg  plano0.cfg  plano01.cfg  plano011.cfg  plano0111.cfg  plano01111.cfg  plano011111.cfg  plano0111111.cfg  plano1.cfg  sesion.mos  videomanager_circularbuffer.cfg
data/samples/ChannelControl/: channel0.cfg  channelcontrol.mol  erase.cfg  icon.cfg  image.cfg  keyboard.cfg  ligia.cfg  masterchannel.cfg  mixer.cfg  mouse.cfg  panel.cfg  presetpanel.cfg  sesion.mos
data/samples/ChatInteractivo/: CAMARA.cfg  ChatInteractivo.mol  MARCA.cfg  MASCARA.cfg  PARTICULAS.cfg  TEXTO.cfg  TEXTO3D.cfg  VIDEO.cfg  oscin.cfg
data/samples/CicloDelAgua/: AGUA.cfg  CICLO.cfg  CONDENSACION.cfg  CicloDelAgua.mol  EVAPORACION.cfg  PAISAJE.cfg  PRECIPITACION.cfg  Relieve.cfg  SONIDO.cfg  erase.cfg  icon.cfg  oscout.cfg  sesion.mos
data/samples/Dibujo_con_luz/: camara_espejada.cfg  dibujo_con_luz.mol  mascara.cfg  sesion.mos
data/samples/LiveDrawing/: dibujo.mol  sesion.mos
data/samples/ParticlesBounce/: erase.cfg  ico.cfg  mirrorg.cfg  particles.cfg  particles_bounce.mol  sesion.mos
data/samples/ParticlesInteractive/: icam.cfg  interactiveparticles.cfg  particles_interactive.mol  sesion.mos  trackerklt.cfg  videomanager.cfg
data/samples/ParticlesInteractive/shaders/: Edges.glsl  EmbossEdgesVertex.glsl  Sharpen.cfg
data/samples/Rain_Particles/: Rain_Particles.mol  blur.cfg  erase.cfg  lluvia.cfg  lluvia1.cfg  lluvia11.cfg  moldeoapioscin.cfg  moldeoapioscout.cfg  sesion.mos  sonido.cfg
data/samples/ShaderExample/: icon.cfg  icon3.cfg  moldeoapioscin.cfg  sesion.mos  shader_example.mol
data/samples/ShaderExample/shaders/: Laser.glsl  Maxxml.cfg  MovePart.cfg  Recorte.glsl
data/samples/SimpleProject/: particulas.cfg  sesion.mos  simple_project.mol
data/samples/Snow_Particles/: Snow_Particles.mol  moldeoapioscin.cfg  moldeoapioscout.cfg  pfx.cfg  sesion.mos  sonido.cfg
data/samples/Tunel/: Tunel.mol  erase.cfg  mirrorg.cfg  moldeoapioscin.cfg  sesion.mos  tunel.cfg  tunel2.cfg  tunel21.cfg  tunel22.cfg
data/samples/VideoBuffers/: Sobel.cfg  icon.cfg  sesion.mos  video_buffers.mol  videomanager_videobuffer.cfg
data/samples/VisualArt/: CAMARA.cfg  FLOW.cfg  ICON.cfg  ICON2.cfg  MIRRORG.cfg  Moldeo_Processing_Analizer.molx  PARTIS.cfg  PARTIS1.cfg  PARTIS2.cfg  PARTIS3.cfg  PARTIS4.cfg  SONIDO.cfg  TUNEL.cfg  VIDEO.cfg  VisualArt.mol  erase.cfg  mg.cfg  oscout.cfg  parti_stars.cfg  parti_stars_2.cfg  parti_stars_3.cfg  sound.cfg  soundoscin.cfg
data/samples/VisualArt/shaders/: Copy.cfg  HeightBump.cfg  HeightBump.glsl  HeightBumpLight.cfg  HeightBumpLight.glsl  Laplacian.cfg  Palette.cfg  Palette.glsl  PosterizeAlpha.cfg  PosterizeAlpha.glsl  Recorte.glsl  Rotate.cfg  Rotate.glsl  Sobel.2.glsl  Sobel.glsl  Sobel.glsl.bk  SobelAlpha.cfg  SobelAlpha.glsl  SoftEdgeAlpha.cfg  SoftEdgeAlpha.glsl  Translate.cfg  Translate.glsl  Warp.cfg  Warp.glsl  Water.cfg  Water.glsl  WaterBackground.cfg  WaterBackground.glsl
data/test/: camaras.mol  channel0.cfg  icon1.cfg  icon2.cfg  ligia.cfg  livedrawing2.cfg  mirror.cfg  plane.cfg  test.mol  videomanager.cfg
data/test/brushes/: brush1.tga  brush2.tga  diagonal_lines.tga
data/test/imagenes/tunel/: ilus03.tga
data/test/shaders/painter/: RenderGrad2fp.glsl
moldeodirector/trunk/: Makefile.am  Makefile.in  aclocal.m4  buildpkg.sh  configure  configure.ac  configure.in  control.amd64  control.amd64.11.10
moldeodirector/trunk/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
moldeodirector/trunk/data/: Makefile.am  Makefile.in
moldeodirector/trunk/data/desktop/: moldeodirector.desktop
moldeodirector/trunk/data/icons/: moldeodirector.xpm
moldeodirector/trunk/data/test/: cubemap.cfg  debug.cfg  erase.cfg  icam.cfg  icon.cfg  img_camara.cfg  mirrorg.cfg  mouse.cfg  netoscin.cfg  partiture.cfg  protconect.par  shadermanager.cfg  soundmanager.cfg  test.mol  test_complete.mol  tunel.cfg  videowall.cfg
moldeodirector/trunk/moldeodirector/: HtmlPanel.cpp  HtmlPanel.h  Makefile.am  Makefile.in  PreviewWindowSystemMem.cpp  PreviewWindowSystemMem.h  director.gmo  mo3dModelPanel.cpp  mo3dModelPanel.h  moAuiTabArt.h  moColorMotion.cpp  moColorMotion.h  moConfigurationAdvancedOutput.cpp  moConfigurationAdvancedOutput.h  moConfigurationDialog.cpp  moConfigurationDialog.h  moConfigurationGeneral.cpp  moConfigurationGeneral.h  moConfigurationOutput.cpp  moConfigurationOutput.h  moConnectionsWindow.cpp  moConnectionsWindow.h  moDirectorChildConsole.cpp  moDirectorChildConsole.h  moDirectorChildFrame.cpp  moDirectorChildFrame.h  moDirectorConsole.cpp  moDirectorConsole.h  moDirectorCore.cpp  moDirectorCore.h  moDirectorFrame.cpp  moDirectorFrame.h  moDirectorIODeviceManager.cpp  moDirectorIODeviceManager.h  moDirectorStartFrame.cpp  moDirectorStartFrame.h  moDirectorTypes.h  moEffectConfig.cpp  moEffectConfig.h  moEffectLayerCtrl.cpp  (+91 more)
moldeodirector/trunk/moldeodirector/treemultictrl/: TreeMultiItemWindow.h  tmcimages.h  wxTreeMultiCtrl.cpp  wxTreeMultiCtrl.h
moldeodirector/trunk/moldeodirector/vdtc/: virtualdirtreectrl.cpp
moldeodirector/trunk/moldeodirector/wxsmith/: moColorMotion.wxs  moColorMotion.wxs.bk  moConfigurationAdvancedOutput.wxs  moConfigurationDialog.wxs  moConfigurationGeneral.wxs  moConfigurationOutput.wxs  moEffectLayerCtrl.wxs  moFontPanel.wxs  moFunctionPanel.wxs  moLayerEffectCtrl.wxs  moObjectMotion.wxs  moPanelTexture.wxs  moPreviewFrame.wxs  moPreviewWindow.wxs  moScriptPanel.wxs  moShaderCtrl.wxs  moSoundPanel.wxs  moTextureItemCtrl.wxs
moldeodirector/trunk/test-suite/: Makefile  Makefile.am  Makefile.in
(+357 files in other folders)
