
datadir = ${prefix}/share/moldeo/data
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps

dist_pixmaps_DATA = icons/moldeologo.xpm \
		    icons/moldeologo48x48.png\
		    icons/moldeodirector.png\
		    icons/moldeodirector.xpm

dist_desktop_DATA = desktop/moldeodirector.desktop

dist_fonts_DATA = fonts/Tuffy.ttf
dist_cursors_DATA = cursors/copy_cur.cur \
		    cursors/drag_cur.cur \
		    cursors/edit_cur.cur \
		    cursors/move_cur.cur

dist_icons_DATA = icons/moldeologo.xpm \
icons/moldeologo48x48.png\
icons/moldeodirector.png\
icons/moldeodirector.xpm\
icons/add.png \
icons/api_16.png \
icons/arrow_sans_down_16.png \
icons/arrow_sans_right_16.png \
icons/category_16.png \
icons/colors.png \
icons/copy_cur.cur \
icons/csvColors256.png \
icons/csvColors32.png \
icons/csvColors64.png \
icons/delete.png \
icons/drag_cur.cur \
icons/edit_cur.cur \
icons/ff.jpg \
icons/folder_sans_16.png \
icons/fullscreen32.png \
icons/functiontest.png \
icons/help.jpg \
icons/image_16.png \
icons/imageempty.png \
icons/image_run_16.png \
icons/import.png \
icons/information.jpg \
icons/inspect.png \
icons/layercontrols.png \
icons/Moldeo32.ico \
icons/moldeologo.png \
icons/more.png \
icons/motioncircular.png \
icons/motiondiagonal.png \
icons/motionhorizontal.png \
icons/motionrandom.png \
icons/motionvertical.png \
icons/move_cur.cur \
icons/off32.png \
icons/off.jpg \
icons/on32.png \
icons/on.jpg \
icons/onoffall32.png \
icons/onoffall.jpg \
icons/onofficon32.png \
icons/onofficon.jpg \
icons/ontology_16.png \
icons/output32.png \
icons/patron16.png \
icons/patron96.png \
icons/pause32.png \
icons/pause.jpg \
icons/pickcolor.png \
icons/play32dis.png \
icons/play32.png \
icons/play.jpg \
icons/rdf_16.png \
icons/relevance_16.png \
icons/rewind.jpg \
icons/rotate.png \
icons/savesession32.png \
icons/savevideo32.png \
icons/scale.png \
icons/screenshot32.png \
icons/search_16.png \
icons/select.png \
icons/server_16.png \
icons/server_edit_16.png \
icons/set.png \
icons/settings_16.png \
icons/sitemap_16.png \
icons/skip.jpg \
icons/stop32.png \
icons/stop.jpg \
icons/translate.png \
icons/video_16.png \
icons/video_run_16.png \
icons/view_16_off.png \
icons/view_16.png \
icons/visibilitynone.png \
icons/visibility.png \
icons/volume.jpg

