
datadir = ${prefix}/share/moldeo/data
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
desktopdir = ${prefix}/share/applications
pixmapsdir = ${prefix}/share/pixmaps

dist_pixmaps_DATA = icons/moldeologo.xpm \
		    icons/moldeologo48x48.png\
		    icons/moldeodirector.png\
		    icons/moldeodirector.xpm

dist_desktop_DATA = desktop/moldeodirector.desktop
dist_fonts_DATA = fonts/*.ttf
dist_cursors_DATA = cursors/*.cur
dist_icons_DATA = icons/*.png

