
datadir = ${prefix}/share/moldeodirector
fontsdir = ${datadir}/fonts
cursorsdir = ${datadir}/cursors
iconsdir = ${datadir}/icons
testdir = ${datadir}/test
testsimpledir = ${testdir}

dist_fonts_DATA = fonts/Tuffy.ttf
dist_cursors_DATA = cursors/copy_cur.cur \
		    cursors/drag_cur.cur \
		    cursors/edit_cur.cur \
		    cursors/move_cur.cur
dist_icons_DATA = icons/add.png \
		  icons/drag_cur.cur \
		  icons/import.png \
  		 icons/motiondiagonal.png \
	      	 icons/on32.png \
   		 icons/pause32.png \
	      	 icons/rewind.jpg \
	 	 icons/set.png \
     		 icons/volume.jpg \
		 icons/colors.png \
		 icons/edit_cur.cur \
      		 icons/information.jpg \
	  	 icons/motionhorizontal.png \
		 icons/on.jpg \
   		 icons/pause.jpg \
                 icons/rotate.png\
                 icons/skip.jpg\
                 icons/copy_cur.cur\
                 icons/ff.jpg\
                 icons/inspect.png\
                 icons/motionrandom.png\
                 icons/onoffall32.png\
                 icons/pickcolor.png\
                 icons/savesession32.png\
                 icons/stop32.png\
                 icons/csvColors256.png\
                 icons/fullscreen32.png\
                 icons/layercontrols.png\
                 icons/motionvertical.png\
                 icons/onoffall.jpg\
                 icons/play32.png\
                 icons/savevideo32.png\
                 icons/stop.jpg\
                 icons/csvColors32.png\
                 icons/functiontest.png\
                 icons/Moldeo32.ico\
                 icons/move_cur.cur\
                 icons/onofficon32.png\
                 icons/play32dis.png\
                 icons/scale.png\
                 icons/translate.png\
                 icons/csvColors64.png\
                 icons/help.jpg\
                 icons/more.png\
                 icons/off32.png\
                 icons/onofficon.jpg\
                 icons/play32.png\
                 icons/screenshot32.png\
                 icons/visibilitynone.png\
                 icons/delete.png\
                 icons/imageempty.png\
                 icons/motioncircular.png\
                 icons/off.jpg\
                 icons/pause32.png\
                 icons/play.jpg\
                 icons/select.png\
                 icons/visibility.png

dist_testsimple_DATA = \
		test/test.mol \
		test/erase.cfg \
		test/debug.cfg \
		test/icon.cfg

dist_test_DATAx = \
		test/imagenes/tunel/ilus00.tga \
		test/imagenes/tunel/ilus01.tga \
		test/imagenes/tunel/ilus02.tga \
		test/imagenes/tunel/ilus03.tga \
		test/fonts/arial.ttf \
		test/images/pintura.jpg \
		test/images/pajarito.png \
		test/images/pececito.png \
		test/shaders/painter/ColorPart.glsl \
		test/shaders/painter/RenderGrad2fp.glsl \
		test/shaders/painter/RenderAveGrad.glsl \
		test/shaders/painter/RenderBrushes.glsl \
		test/shaders/painter/MovePart.glsl \
		test/shaders/kltgpu/nvidia/w1.cg \
		test/shaders/kltgpu/nvidia/blue.cg \
		test/shaders/kltgpu/nvidia/w2.cg \
		test/shaders/kltgpu/nvidia/matrixelem1.cg \
		test/shaders/kltgpu/nvidia/matrixelem2.cg \
		test/shaders/kltgpu/nvidia/matrixelem3.cg \
		test/shaders/kltgpu/nvidia/undistort.cg \
		test/shaders/kltgpu/nvidia/partialsum1.cg \
		test/shaders/kltgpu/nvidia/partialsum2.cg \
		test/shaders/kltgpu/nvidia/pass.cg \
		test/shaders/kltgpu/nvidia/chan.cg \
		test/shaders/kltgpu/nvidia/corner1.cg \
		test/shaders/kltgpu/nvidia/red.cg \
		test/shaders/kltgpu/nvidia/corner2a.cg \
		test/shaders/kltgpu/nvidia/corner2b.cg \
		test/shaders/kltgpu/nvidia/matrixsolve.cg \
		test/shaders/kltgpu/nvidia/corner2c.cg \
		test/shaders/kltgpu/nvidia/white.cg \
		test/shaders/kltgpu/nvidia/floatingwin.cg \
		test/shaders/kltgpu/nvidia/matrixsolve_f.cg \
		test/shaders/kltgpu/ati/w1.cg \
		test/shaders/kltgpu/ati/blue.cg \
		test/shaders/kltgpu/ati/w2.cg \
		test/shaders/kltgpu/ati/matrixelem1.cg \
		test/shaders/kltgpu/ati/matrixelem2.cg \
		test/shaders/kltgpu/ati/matrixelem3.cg \
		test/shaders/kltgpu/ati/undistort.cg \
		test/shaders/kltgpu/ati/partialsum1.cg \
		test/shaders/kltgpu/ati/partialsum2.cg \
		test/shaders/kltgpu/ati/pass.cg \
		test/shaders/kltgpu/ati/chan.cg \
		test/shaders/kltgpu/ati/corner1.cg \
		test/shaders/kltgpu/ati/red.cg \
		test/shaders/kltgpu/ati/corner2a.cg \
		test/shaders/kltgpu/ati/corner2b.cg \
		test/shaders/kltgpu/ati/matrixsolve.cg \
		test/shaders/kltgpu/ati/corner2c.cg \
		test/shaders/kltgpu/ati/white.cg \
		test/shaders/kltgpu/ati/floatingwin.cg \
		test/shaders/kltgpu/ati/matrixsolve_f.cg \
		test/shaders/livedrawing/LineAntialising.cfg \
		test/shaders/livedrawing/LineAntialising.glsl \
		test/shaders/livedrawing/VertexProcessing.glsl \
		test/shaders/Posterize.cfg \
		test/shaders/Mixer.glsl \
		test/shaders/PixelateDyn.glsl \
		test/shaders/Saturate.cfg \
		test/shaders/GridEmboss.cfg \
		test/shaders/PulseGrid.glsl \
		test/shaders/Sharpen.cfg \
		test/shaders/PulseEmboss.cfg \
		test/shaders/ColorMatrix.cfg \
		test/shaders/DynEmboss.cfg \
		test/shaders/DynSaturate.cfg \
		test/shaders/Blur.cfg \
		test/shaders/ColorMatrix.glsl \
		test/shaders/DynEmboss.glsl \
		test/shaders/DynSaturate.glsl \
		test/shaders/Maxxml.cfg \
		test/shaders/Edgesxml.cfg \
		test/shaders/Copy.cfg \
		test/shaders/PixelateDyn2.glsl \
		test/shaders/Pixelate.cfg \
		test/shaders/Pixelate.glsl \
		test/shaders/Mixer.cfg \
		test/shaders/RenderGrad2fp.cfg \
		test/shaders/Posterize.glsl \
		test/shaders/Edges.cfg \
		test/shaders/Max.glsl \
		test/shaders/Edges.glsl \
		test/shaders/Saturate.glsl \
		test/shaders/BilinearFilter.cfg \
		test/shaders/BilinearFilter.glsl \
		test/shaders/MovePart.cfg \
		test/shaders/Sharpen.glsl \
		test/shaders/StaticEmboss.glsl \
		test/shaders/TexInterpolator.cfg \
		test/shaders/ColorPart.cfg \
		test/shaders/CopyRGB.cfg \
		test/shaders/TexInterpolator.glsl \
		test/shaders/Blur.glsl \
		test/shaders/CopyRGB.glsl \
		test/shaders/RenderAveGrad.cfg \
		test/shaders/RenderBrushes.cfg \
		test/shaders/Copy.glsl \
		test/iconos/brushes/diagonal_lines.tga \
		test/iconos/brushes/dots.tga \
		test/iconos/brushes/brush_normal.tga \
		test/iconos/brushes/diagonal.tga \
		test/iconos/brushes/simple_round.tga \
		test/iconos/brushes/brush.tga \
		test/iconos/estrellas/shine.tga \
		test/iconos/estrellas/star.tga \
		test/iconos/estrellas/spark.tga \
		test/objetos/iconos3d \
		test/objetos/iconos3d/logoGmol.3ds \
		test/objetos/iconos3d/moldeologo.3ds \
		test/fuentes/texto00.png \
		test/brushes/brush2.tga \
		test/brushes/brush3.tga \
		test/brushes/diagonal_lines.tga \
		test/brushes/dots.tga \
		test/brushes/brush_normal.tga \
		test/brushes/diagonal.tga \
		test/brushes/simple_round.tga \
		test/brushes/brush1.tga \
		test/mirrorg.cfg \
		test/netoscin.cfg \
		test/soundmanager.cfg \
		test/mixer.cfg \
		test/masterchannel.cfg \
		test/videowall.cfg \
		test/tunel.cfg \
		test/mouse.cfg \
		test/icon.cfg \
		test/livedrawing2.cfg \
		test/camaras.mol \
		test/erase.cfg \
		test/keyboard.cfg \
		test/videomanager.cfg \
		test/shadermanager.cfg \
		test/painter.cfg \
		test/trackerklt.cfg \
		test/icon1.cfg \
		test/icon2.cfg \
		test/cubemap.cfg \
		test/partiture.cfg \
		test/img_camara.cfg \
		test/trackergpuklt.cfg \
		test/presetpanel.cfg \
		test/image.cfg \
		test/ligia.cfg \
		test/debug.cfg \
		test/channel0.cfg \
		test/panel.cfg \
		test/plane.cfg \
		test/test_complete.mol \
		test/protconect.par \
		test/interactive.mol \
		test/test.mol \
		test/icam.cfg \
		test/mirror.cfg \
		test/tablet.cfg \
		test/movie.cfg \
		test/icon3d.cfg 

